[tool.isort]
profile = "black"

[tool.poetry]
name = "vengeful-vineyard"
version = "0.1.0"
description = ""
authors = ["Dotkom"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
uvicorn = "^0.16.0"
asgi-lifespan = "^1.0.1"
asyncpg = "^0.26.0"
aioresponses = "^0.7.3"
pytz = "^2022.6"
types-pytz = "^2022.6.0.1"
fastapi = "^0.109.1"
pyyaml = ">=6.0.1"
emoji = "^2.8.0"
types-emoji = "^2.1.0.3"
mangum = "^0.17.0"
networkx = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961"
pre-commit = "^2.20.0"
pylint = "^2.14.4"
mypy-extensions = "^0.4.3"
httpx = "^0.23.0"
pytest-asyncio = "^0.18.3"
aiohttp = "^3.9.2"
pdoc3 = "^0.10.0"
pytest = "7.1.3"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
